# dffm-demo

./: .env  Cargo.toml  README.md  setup_db.sh
migrations/001_users/: up.sql
src/: lib.rs  msg.rs  schema.rs
src/models/: mod.rs  users.rs
