[package]
name = "dffm-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
zmq = "0.10.0"
diesel = { version = "2.0.2", features = [
    "postgres",
    "r2d2",
    "chrono",
    "uuid",
    "numeric"
] }
diesel-async = { version = "0.1.1", features = ["deadpool", "postgres", "tokio-postgres"] }