[package]
name = "dffm-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
dotenv = "0.15.0"
zmq = "0.10.0"
diesel = { version = "2.0.2", features = [
    "postgres",
    "r2d2",
    "chrono",
    "uuid",
    "numeric"
] }
diesel-async = { version = "0.1.1", features = ["deadpool", "postgres", "tokio-postgres"] }
once_cell = "1.16.0"
serde ={ version =  "1.0.147", features = ["derive"]}
serde_json = "1.0.89"
anyhow = "1.0.66"
tokio = { version = "1.22.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.14", features = ["env-filter", "std", "fmt", "time", "local-time"]}
